--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,13 @@ dependencies:
   firebase_core: ^0.5.0
   firebase_storage: ^4.0.1
   flare_flutter: ^2.0.6
+  flutter_icons: ^1.1.0
   fluttertoast: ^7.1.1
   grouped_list: ^3.5.0
   image_picker: ^0.6.7+11
   intl: ^0.16.1
   sticky_grouped_list: ^1.2.0
+  string_similarity: ^1.1.0
 
 dev_dependencies:
   flutter_test:
